Update security package